Add info, images, and styles

--- a/src/index.html
+++ b/src/index.html
@@ -1,9 +1,22 @@
-<html xmlns="http://www.w3.org/1999/xhtml" >
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" lang="en">
 <head>
-    <title></title>
-    <style></style>
+    <meta charset="utf-8" />
+    <meta name="theme-color" content="#121212" />
+    <meta name="description" content="Luke Pothier - Software engineer in Cape Town, South Africa." />
+    <title>Luke Pothier</title>
+    <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-  <p>200</p>
+    <div class="content">
+        <h1>Luke Pothier</h1>
+        <h3>Software engineer in Cape Town, South Africa</h3>
+        <ul>
+            <li class="link"><a target="_blank" rel="noopener noreferrer nofollow" href="https://github.com/lukepothier" title="GitHub"><img class="icon" alt="GitHub" src="img/icon-github.svg" /></a></li>
+            <li class="link"><a target="_blank" rel="noopener noreferrer nofollow" href="https://stackoverflow.com/users/4865498/luke-pothier" title="Stack Overflow"><img class="icon" alt="Stack Overflow" src="img/icon-stack-overflow.svg" /></a></li>
+            <li class="link"><a href="mailto:lukepothier+lukepothier.com@gmail.com"><img class="icon" alt="Email" src="img/icon-email.svg" title="Email" /></a></li>
+            <li class="link"><a href="#" onclick="alert('Coming soon :)'); return false;" title="Download CV"><img class="icon" alt="Download CV" src="img/icon-download-cv.svg" /></a></li>
+        </ul>
+    </div>
 </body>
 </html>
