--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
         <ul>
             <li class="link"><a target="_blank" rel="noopener noreferrer nofollow" href="https://github.com/lukepothier" title="GitHub"><img class="icon" alt="GitHub" src="img/icon-github.svg" /></a></li>
             <li class="link"><a href="mailto:lukepothier+lukepothier.com@gmail.com"><img class="icon" alt="Email" src="img/icon-email.svg" title="Email" /></a></li>
-            <li class="link"><a href="#" onclick="alert('Coming soon :)'); return false;" title="Download CV"><img class="icon" alt="Download CV" src="img/icon-download-cv.svg" /></a></li>
+            <li class="link"><a target="_blank" rel="noopener noreferrer nofollow" href="files/cv.pdf" title="Download CV"><img class="icon" alt="Download CV" src="img/icon-download-cv.svg" /></a></li>
         </ul>
     </div>
 </body>
