--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en">
+
 <head>
     <meta charset="utf-8" />
     <meta name="theme-color" content="#121212" />
@@ -7,15 +8,20 @@
     <title>Luke Pothier</title>
     <link rel="stylesheet" href="styles.css" />
 </head>
+
 <body>
     <div class="content">
         <h1>Luke Pothier</h1>
         <h3>Software engineer in Cape Town, South Africa</h3>
         <ul>
-            <li class="link"><a target="_blank" rel="noopener noreferrer nofollow" href="https://github.com/lukepothier" title="GitHub"><img class="icon" alt="GitHub" src="img/icon-github.svg" /></a></li>
-            <li class="link"><a href="mailto:lukepothier+lukepothier.com@gmail.com"><img class="icon" alt="Email" src="img/icon-email.svg" title="Email" /></a></li>
-            <li class="link"><a target="_blank" rel="noopener noreferrer nofollow" href="files/cv.pdf" title="Download CV"><img class="icon" alt="Download CV" src="img/icon-download-cv.svg" /></a></li>
+            <li class="link"><a target="_blank" rel="noopener noreferrer nofollow" href="https://github.com/lukepothier"
+                    title="GitHub"><img class="icon" alt="GitHub" src="img/icon-github.svg" /></a></li>
+            <li class="link"><a href="mailto:lukepothier+lukepothier.com@gmail.com"><img class="icon" alt="Email"
+                        src="img/icon-email.svg" title="Email" /></a></li>
+            <li class="link"><a target="_blank" rel="noopener noreferrer nofollow" href="files/cv.pdf"
+                    title="Download CV"><img class="icon" alt="Download CV" src="img/icon-download-cv.svg" /></a></li>
         </ul>
     </div>
 </body>
+
 </html>
