Fix viewport and make the centering more fancy

--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8" />
     <meta name="theme-color" content="#121212" />
     <meta name="description" content="Luke Pothier - Software engineer in Cape Town, South Africa." />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Luke Pothier</title>
     <link rel="stylesheet" href="styles.css" />
 </head>
