New icons with hover filters

--- a/src/index.html
+++ b/src/index.html
@@ -15,12 +15,18 @@
         <h1>Luke Pothier</h1>
         <h3>Software engineer in Cape Town, South Africa</h3>
         <ul>
-            <li class="link"><a target="_blank" rel="noopener noreferrer nofollow" href="https://github.com/lukepothier"
-                    title="GitHub"><img class="icon" alt="GitHub" src="img/icon-github.svg" /></a></li>
-            <li class="link"><a href="mailto:lukepothier+lukepothier.com@gmail.com"><img class="icon" alt="Email"
-                        src="img/icon-email.svg" title="Email" /></a></li>
-            <li class="link"><a target="_blank" rel="noopener noreferrer nofollow" href="files/cv.pdf"
-                    title="Download CV"><img class="icon" alt="Download CV" src="img/icon-download-cv.svg" /></a></li>
+            <li class="link">
+                <a target="_blank" rel="noopener noreferrer nofollow" href="https://github.com/lukepothier" title="GitHub"><img class="icon icon-github" alt="GitHub" src="img/icon-github.svg" /></a>
+            </li>
+            <li class="link">
+                <a target="_blank" rel="noopener noreferrer nofollow" href="https://stackoverflow.com/users/4865498/luke-pothier" title="Stack Overflow"><img class="icon icon-stack-overflow" alt="Stack Overflow" src="img/icon-stack-overflow.svg" /></a>
+            </li>
+            <li class="link">
+                <a href="mailto:lukepothier+lukepothier.com@gmail.com"><img class="icon icon-email" alt="Email" src="img/icon-email.svg" title="Email" /></a>
+            </li>
+            <li class="link">
+                <a target="_blank" rel="noopener noreferrer nofollow" href="files/cv.pdf" title="Download CV"><img class="icon icon-cv" alt="Download CV" src="img/icon-cv.svg" /></a>
+            </li>
         </ul>
     </div>
 </body>
