--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,7 @@
 
 <body>
     <div class="content">
+        <div class="avatar" role="img" aria-label="Avatar"></div>
         <h1>Luke Pothier</h1>
         <h3>Software engineer in Cape Town, South Africa</h3>
         <ul>
