--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en">
 
 <head>
-    <meta charset="utf-8" />
+    <meta content="text/html; charset=UTF-8" http-equiv="content-type" />
     <meta name="theme-color" content="#121212" />
     <meta name="description" content="Luke Pothier - Software engineer in Cape Town, South Africa." />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -29,6 +29,7 @@
                 <a target="_blank" rel="noopener noreferrer nofollow" href="files/cv.pdf" title="Download CV"><img class="icon icon-cv" alt="Download CV" src="img/icon-cv.svg" /></a>
             </li>
         </ul>
+        <p><a href="hire-me.html">Hire me</a></p>
     </div>
 </body>
 
