Fix hire me page layout on small viewports

--- a/src/hire-me.html
+++ b/src/hire-me.html
@@ -20,11 +20,11 @@
             Africa and Ireland, so I'm equipped to travel and work internationally fairly easily.
         </p>
 
-        <p>I am passionate about high-quality software. I am looking for full-time remote work that is back-end, front-end web, or Android-based. I am open to roles that include elements of management, although I am a programmer primarily.
+        <p>I am passionate about high-quality software. I am looking for full-time remote work that is back-end, front-end web, or Android-based. I am open to roles that include elements of management, although I am primarily a programmer.
         </p>
 
         <p>
-            If you'd like more detail, please see my <a target="_blank" rel="noopener noreferrer nofollow" href="files/cv.pdf" title="CV">CV</a>, and as a reference, please see this <a target="_blank" rel="noopener noreferrer nofollow" href="files/lor.pdf"
+            If you'd like more detail, please see my <a target="_blank" rel="noopener noreferrer nofollow" href="files/cv.pdf" title="CV">CV</a> and as a reference, please see this <a target="_blank" rel="noopener noreferrer nofollow" href="files/lor.pdf"
                 title="Letter of Recommendation">letter of recommendation</a> from my previous employer. Otherwise, please feel free to get in touch with me via <a href="mailto:lukepothier+lukepothier.com@gmail.com" title="Email">email</a>.
         </p>
     </div>
