--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <div class="content">
+    <div class="content content-center m-2">
         <div class="avatar" role="img" aria-label="Avatar"></div>
         <h1>Luke Pothier</h1>
         <h3>Software engineer in Cape Town, South Africa</h3>
