Meta tag tweaks

--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,10 @@
     <meta name="description" content="Luke Pothier - Software engineer in Cape Town, South Africa." />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Luke Pothier</title>
+    <meta name="description" content="Luke Pothier - software engineer in Cape Town, South Africa.">
+    <meta name="robots" content="index, follow" />
     <link rel="stylesheet" href="styles.css" />
+    <link rel="canonical" href="https://lukepothier.com/" />
 </head>
 
 <body>
