--- a/src/hire-me.html
+++ b/src/hire-me.html
@@ -6,7 +6,8 @@
     <meta name="theme-color" content="#121212" />
     <meta name="description" content="Luke Pothier - Software engineer in Cape Town, South Africa." />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Luke Pothier</title>
+    <title>Luke Pothier - Hire Me!</title>
+    <meta name="robots" content="noindex, nofollow" />
     <link rel="stylesheet" href="styles.css" />
 </head>
 
