--- a/src/index.html
+++ b/src/index.html
@@ -1,39 +1,68 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en">
-
-<head>
+  <head>
     <meta content="text/html; charset=UTF-8" http-equiv="content-type" />
     <meta name="theme-color" content="#121212" />
-    <meta name="description" content="Luke Pothier - Software engineer in Cape Town, South Africa." />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta
+      name="description"
+      content="Luke Pothier - Software engineer in Cape Town, South Africa."
+    />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Luke Pothier</title>
-    <meta name="description" content="Luke Pothier - software engineer in Cape Town, South Africa.">
     <meta name="robots" content="index, follow" />
     <link rel="stylesheet" href="styles.css" />
     <link rel="canonical" href="https://lukepothier.com/" />
-</head>
+  </head>
 
-<body>
+  <body>
     <div class="content content-center m-2">
-        <div class="avatar" role="img" aria-label="Avatar"></div>
-        <h1>Luke Pothier</h1>
-        <h3>Software engineer in Cape Town, South Africa</h3>
-        <ul>
-            <li class="link">
-                <a target="_blank" rel="noopener noreferrer nofollow" href="https://github.com/lukepothier" title="GitHub"><img class="icon icon-github" alt="GitHub" src="img/icon-github.svg" /></a>
-            </li>
-            <li class="link">
-                <a target="_blank" rel="noopener noreferrer nofollow" href="https://stackoverflow.com/users/4865498/luke-pothier" title="Stack Overflow"><img class="icon icon-stack-overflow" alt="Stack Overflow" src="img/icon-stack-overflow.svg" /></a>
-            </li>
-            <li class="link">
-                <a href="mailto:lukepothier+lukepothier.com@gmail.com"><img class="icon icon-email" alt="Email" src="img/icon-email.svg" title="Email" /></a>
-            </li>
-            <li class="link">
-                <a target="_blank" rel="noopener noreferrer nofollow" href="files/cv.pdf" title="Download CV"><img class="icon icon-cv" alt="Download CV" src="img/icon-cv.svg" /></a>
-            </li>
-        </ul>
-        <p><a href="hire-me.html">Hire me</a></p>
+      <div class="avatar" role="img" aria-label="Avatar"></div>
+      <h1>Luke Pothier</h1>
+      <h3>Software engineer in Cape Town, South Africa</h3>
+      <ul>
+        <li class="link">
+          <a
+            target="_blank"
+            rel="noopener noreferrer nofollow"
+            href="https://github.com/lukepothier"
+            title="GitHub"
+            ><img
+              class="icon icon-github"
+              alt="GitHub"
+              src="img/icon-github.svg"
+          /></a>
+        </li>
+        <li class="link">
+          <a
+            target="_blank"
+            rel="noopener noreferrer nofollow"
+            href="https://stackoverflow.com/users/4865498/luke-pothier"
+            title="Stack Overflow"
+            ><img
+              class="icon icon-stack-overflow"
+              alt="Stack Overflow"
+              src="img/icon-stack-overflow.svg"
+          /></a>
+        </li>
+        <li class="link">
+          <a href="mailto:lukepothier+lukepothier.com@gmail.com"
+            ><img
+              class="icon icon-email"
+              alt="Email"
+              src="img/icon-email.svg"
+              title="Email"
+          /></a>
+        </li>
+        <li class="link">
+          <a
+            target="_blank"
+            rel="noopener noreferrer nofollow"
+            href="files/cv.pdf"
+            title="Download CV"
+            ><img class="icon icon-cv" alt="Download CV" src="img/icon-cv.svg"
+          /></a>
+        </li>
+      </ul>
     </div>
-</body>
-
+  </body>
 </html>
