Tweak index.html head contents

--- a/src/index.html
+++ b/src/index.html
@@ -1,17 +1,34 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" lang="en">
+<!DOCTYPE html>
+<html lang="en" class="no-js">
   <head>
-    <meta content="text/html; charset=UTF-8" http-equiv="content-type" />
-    <meta name="theme-color" content="#121212" />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+    <title>Luke Pothier</title>
+
+    <script type="module">
+      document.documentElement.classList.remove("no-js");
+      document.documentElement.classList.add("js");
+    </script>
+
+    <link rel="stylesheet" href="styles.css" />
+
     <meta
       name="description"
       content="Luke Pothier - Software engineer in Cape Town, South Africa."
     />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Luke Pothier</title>
-    <meta name="robots" content="index, follow" />
-    <link rel="stylesheet" href="styles.css" />
+    <meta property="og:title" content="Luke Pothier" />
+    <meta
+      property="og:description"
+      content="Luke Pothier - Software engineer in Cape Town, South Africa."
+    />
+    <meta property="og:locale" content="en_GB" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://lukepothier.com/" />
     <link rel="canonical" href="https://lukepothier.com/" />
+
+    <link rel="icon" href="/favicon.ico" />
+    <meta name="theme-color" content="#121212" />
   </head>
 
   <body>
